                          ------------------


Not to mention all bugfixes and rewrites.

Coccinella-0.9*

 o removed the p2p whiteboard mode
 o the whiteboard code can now optionally be removed from the application
 o added settings on unix for default web browser and email client
 o automatically gets a list with free jabber servers when registering new account

Coccinella-0.95.16 (20070214):

 o new dynamic status menus
 o new basic dialogs on unix
 o new avatar settings button and menu
 o configurable JID or status entry in main window
 o added file/import/emoticons menu command
 o added file/export/roster menu command
 o added search previous
 o added menu to increase the smallest font sizes in two steps
 o added SOCKS proxy, compatible with SimpLite-Jabber
 o cleaner groupchat dialog with new methods to set subject and nickname
 o added collapsable and flexible toolbars
 o chat subject now set by pressing Return in subject field
 o users name attribute can now be edited directly in situ (in roster)
 o faster chat history parsing
 o added uri support for the KDE desktop environment
 o added support to handle xdata forms embedded in normal messages

Coccinella-0.95.15 (20061117):

 o added option to avoid saving password when registering
 o added Jabber/Register/ICQ,MSN,... sub menus
 o lot of fixes to iaxclient voip part
 o more robust TLS negotiation on slow networks
 o now the complete prefs folder can be stored on a removable drive

Coccinella-0.95.14 (20061010):

 o support for DNS SRV and TXT (HTTP) lookup
 o pubsub library support
 o library support for JEP-0138: Stream Compression
 o text search in history and chat dialogs
 o parsing xmpp URIs updated to RFC 4622; added in text xmpp URI parsing
 o added code for JEP-0147: XMPP URI Scheme Query Components 
 o in-text parsing of mailto and im URI's
 o added metakit whiteboard file format for single file storage
 o complete inbox now stored as a single file metakit database