@@ -31,7 +31,7 @@ package ifneeded jlib::ftrans      0.1 [list source [file join $dir ftrans.tcl]]
 package ifneeded jlib::ibb         0.1 [list source [file join $dir ibb.tcl]]
 package ifneeded jlib::jingle      0.1 [list source [file join $dir jingle.tcl]]
 package ifneeded jlib::muc         0.3 [list source [file join $dir muc.tcl]]
-package ifneeded jlib::pep         0.2 [list source [file join $dir pep.tcl]]
+package ifneeded jlib::pep         0.3 [list source [file join $dir pep.tcl]]
 package ifneeded jlib::pubsub      0.2 [list source [file join $dir pubsub.tcl]]
 package ifneeded jlib::roster      1.0 [list source [file join $dir roster.tcl]]
 package ifneeded jlib::si          0.1 [list source [file join $dir si.tcl]]
