@@ -11,6 +11,7 @@ Coccinella-0.9*
  o the whiteboard code can now optionally be removed from the application
  o added settings on unix for default web browser and email client
  o automatically gets a list with free jabber servers when registering new account
+ o updated pep/mood code to version 1.0 of the PEP protocol
 
 Coccinella-0.95.16 (20070214):
 
